all good  so far

--- a/backend/.env
+++ b/backend/.env
@@ -23,5 +23,8 @@ UPLOAD_DIR=uploads
 MAX_FILE_SIZE=5242880
 
 
-ALLOW_AUTH_BYPASS=false
-NODE_ENV=production
+#ALLOW_AUTH_BYPASS=false
+#NODE_ENV=production
+
+NODE_ENV=development
+ALLOW_AUTH_BYPASS=true
