--- a/frontend/.env
+++ b/frontend/.env
@@ -11,5 +11,8 @@ VITE_ENABLE_MAGIC_LINK=true
 VITE_ENABLE_STAFF_PIN_AUTH=true
 
 
-ALLOW_AUTH_BYPASS=false
-NODE_ENV=production
+#ALLOW_AUTH_BYPASS=false
+#NODE_ENV=production
+
+NODE_ENV=development
+ALLOW_AUTH_BYPASS=true
