--- a/backend/.env
+++ b/backend/.env
@@ -23,8 +23,5 @@ UPLOAD_DIR=uploads
 MAX_FILE_SIZE=5242880
 
 
-#ALLOW_AUTH_BYPASS=false
-#NODE_ENV=production
-
-NODE_ENV=development
 ALLOW_AUTH_BYPASS=true
+BYPASS_WARNING_ACKNOWLEDGED=true
